src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__loop_continue.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
loop {
  let v = 0
  continue
  let v = 1
}


OK
.fn @main
  params 0
  stack 2
  .locals
    v = r1
  .code
  0  lsmi r1, 0
  1  jmp -1   ; to 0
  2  lsmi r1, 1
  3  jmp -3   ; to 0
  4  lnil r0
  5  ret
