src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__loop_infinite.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 2
  .locals
    v = r1
  .code
  0  lsmi r1, 1
  1  jmp -1
  2  lnil r0
  3  ret
