src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__loop_infinite_empty.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 1
  .code
  0  jmp 0   ; to 0
  1  lnil r0
  2  ret
