src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__loop_nested_break.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
//
loop {
  let v = 0
  loop {
    let v = 1
    break
    let v = 2
  }
  break
  let v = 3
}

OK
.fn @main
  params 0
  stack 3
  .locals
    v = r1
    v = r2
  .code
   0  lsmi r1, 0
   1  lsmi r2, 1
   2  jmp 3   ; to 5
   3  lsmi r2, 2
   4  jmp -3   ; to 1
   5  jmp 3   ; to 8
   6  lsmi r1, 3
   7  jmp -7   ; to 0
   8  lnil r0
   9  ret
