src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__loop_nested_continue.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 3
  .locals
    v = r1
    v = r2
  .code
   0  lsmi r1, 0
   1  lsmi r2, 1
   2  jmp -1
   3  lsmi r2, 2
   4  jmp -3
   5  jmp -5
   6  lsmi r1, 3
   7  jmp -7
   8  lnil r0
   9  ret
