src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__module_var_use_bad.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
//module

fn f() { i }
let i = 0
f()

ERROR
could not resolve name
3 |  fn f() { i }
  |           ^
