src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__nil.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
nil


OK
.fn @main
  params 0
  stack 1
  .code
  0  lnil r0
  1  ret
