src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__num.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 1
  .code
  0  lnum r0, l0   ; l0=1
  1  ret
